--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+//	local에서 실행 시 -Dcom.amazonaws.sdk.disableEc2Metadata=true 옵션을 주어야 함
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
