gitlab cicd test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
 #    - cp /etc/gitlab-runner/spring/main/application.yml src/main/resources/application.yml
     - cat /etc/gitlab-runner/application.yml || echo "NO FILE!!!"
     - cp /etc/gitlab-runner/application.yml src/main/resources/application.yml
+    - cd /etc/gitlab-runner && ls -al
     - gradle clean build
   artifacts:
     paths:
