--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,13 @@ stages:
 
 before_script:
   - echo "🏗️ Gradle 빌드 환경 설정"
+  - cp ${APP_CONFIG} src/main/resources/application.yml
 
 build:
   stage: build
   image: gradle:latest
   script:
-    - echo "$APP_CONFIG" > src/main/resources/application.yml
+#    - echo "$APP_CONFIG" > src/main/resources/application.yml
     - gradle clean build
   artifacts:
     paths:
