--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ before_script:
 
 build:
   stage: build
-  image: gradle:latest
+  image: gradle:8.13.0-jdk17
   script:
     - mkdir -p src/main/resources
     - echo "$APP_CONFIG" > src/main/resources/application.yml
