--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ build:
   image: gradle:8.13.0-jdk17
   script:
     - gradle clean build
+  tags:
+    - local
   when: manual
   artifacts:
     paths:
