ci: 도커 이미지 빌드 추가

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:
   tags:
     - local
   script:
-    - ./gradlew clean bootJar
+    - gradlew clean bootJar
     - docker build -t $IMAGE_NAME:$DOCKER_TAG .
     - docker save $IMAGE_NAME:$DOCKER_TAG -o $IMAGE_NAME.tar
   artifacts:
