--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,12 @@ variables:
 #  SSH_OPTS: "-o StrictHostKeyChecking=no -i $EC2_SSH_KEY"
 
 before_script:
-  - echo "TEST"
   - echo "🏗️ Gradle 빌드 환경 설정"
   - mkdir -p src/main/resources
   - mkdir -p src/test/resources
   - cp "$APP_CONFIG_FILE" src/main/resources/application.yml
   - cp "$TEST_CONFIG_FILE" src/test/resources/application.yml
+  - chmod +x ./gradlew
 
 build:
   stage: build
@@ -21,7 +21,7 @@ build:
   tags:
     - local
   script:
-    - gradlew clean bootJar
+    - ./gradlew clean bootJar
     - docker build -t $IMAGE_NAME:$DOCKER_TAG .
     - docker save $IMAGE_NAME:$DOCKER_TAG -o $IMAGE_NAME.tar
   artifacts:
