--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
 
 before_script:
   - echo "🏗️ Gradle 빌드 환경 설정"
+  - docker info
   - mkdir -p src/main/resources
   - mkdir -p src/test/resources
   - cp "$APP_CONFIG_FILE" src/main/resources/application.yml
