--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ before_script:
 
 build:
   stage: build
-  image: gradle:8.13.0-jdk17
+  # image: gradle:8.13.0-jdk17
   tags:
     - local
   script:
