--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 variables:
   IMAGE_NAME: myapi
   DOCKER_TAG: $CI_COMMIT_SHORT_SHA
-#  SSH_OPTS: "-o StrictHostKeyChecking=no -i $EC2_SSH_KEY"
+  SSH_OPTS: "-o StrictHostKeyChecking=no -i /etc/gitlab-runner/algo-ec2.pem"
 
 before_script:
   - echo "🏗️ Gradle 빌드 환경 설정"
@@ -13,13 +13,10 @@ before_script:
   - mkdir -p src/test/resources
   - cp /etc/gitlab-runner/config/application-app.yml src/main/resources/application.yml
   - cp /etc/gitlab-runner/config/application-test.yml src/test/resources/application.yml
-#  - cp "$APP_CONFIG_FILE" src/main/resources/application.yml
-#  - cp "$TEST_CONFIG_FILE" src/test/resources/application.yml
   - chmod +x ./gradlew
 
 build:
   stage: build
-  # image: gradle:8.13.0-jdk17
   tags:
     - local
   script:
@@ -31,6 +28,16 @@ build:
       - $IMAGE_NAME.tar
     expire_in: 1 hour
   when: manual
+
+#  TODO
+deploy:
+  stage: deploy
+  only:
+    - main
+  script:
+#    - chmod 400 $EC2_SSH_KEY
+    - scp $SSH_OPTS $IMAGE_NAME.tar ec2-user@$EC2_HOST:/home/ec2-user/
+#    - ssh $SSH_OPTS ec2-user@$EC2_HOST 'bash -s' < deploy-blue-green.sh $IMAGE_NAME $DOCKER_TAG
 
 #test:
 #  stage: test
