ci: deploy 스테이지

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ deploy:
 #    - chmod 400 $EC2_SSH_KEY
     - scp $SSH_OPTS $IMAGE_NAME.tar ec2-user@$EC2_HOST:/home/ec2-user/
 #    - ssh $SSH_OPTS ec2-user@$EC2_HOST 'bash -s' < deploy-blue-green.sh $IMAGE_NAME $DOCKER_TAG
+  when: manual
 
 #test:
 #  stage: test
