--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ deploy:
   script:
 #    - chmod 400 $EC2_SSH_KEY
     - scp $SSH_OPTS $IMAGE_NAME.tar ec2-user@$EC2_HOST:/home/ec2-user/
-#    - ssh $SSH_OPTS ec2-user@$EC2_HOST 'bash -s' < deploy-blue-green.sh $IMAGE_NAME $DOCKER_TAG
+    - ssh $SSH_OPTS ec2-user@$EC2_HOST 'bash -s' < /etc/gitlab-runner/deploy.sh $IMAGE_NAME $DOCKER_TAG
   when: manual
 
 #test:
